--- a/styles.css
+++ b/styles.css
@@ -6,20 +6,37 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
+    background-color: #1a1a1a;
+    color: #fff;
 }
 
 h1 {
     margin-bottom: 20px;
+    font-size: 36px;
 }
 
 #timer {
-    font-size: 36px;
+    font-size: 48px;
     margin-bottom: 20px;
+    color: #ff6600;
 }
 
 button {
-    font-size: 18px;
-    padding: 10px 20px;
+    font-size: 24px;
+    padding: 15px 30px;
     margin: 5px;
     cursor: pointer;
+    background-color: #ff6600;
+    color: #1a1a1a;
+    border: none;
+    border-radius: 25px;
+    transition: background-color 0.3 ease;
+}
+button:hover{
+    background-color: rgb(103, 245, 8);
+}
+
+.button-container{
+    display: flex;
+    gap: 10px;
 }
